# qtholon

./: CMakeLists.txt  holonpackage.xml
cmake/: QtHolonConfig.cmake.in  QtHolonPySideSetup.cmake  QtHolonVersion.in
etc/: holon.qt  holon.qt5  holon.qt6  layout.qt  splittedtest.qt5
etc/python/: customTaskC.py  customTaskWidget.py
etc/qml/: customTaskA.qml  customTaskB.qml  customTaskC.qml
share/icons/: clear.xpm  clear@2x.xpm  close.xpm  close@2x.xpm  expand.xpm  expand@2x.xpm  indicator_arrowdown.xpm  indicator_arrowdown@2x.xpm  indicator_arrowup.xpm  indicator_arrowup@2x.xpm  maximize.xpm  maximize@2x.xpm  minimize.xpm  minimize@2x.xpm  run.xpm  run@2x.xpm  run_task.xpm  run_task@2x.xpm  splitbutton_closebottom.xpm  splitbutton_closebottom@2x.xpm  splitbutton_closeleft.xpm  splitbutton_closeleft@2x.xpm  splitbutton_closeright.xpm  splitbutton_closeright@2x.xpm  splitbutton_closetop.xpm  splitbutton_closetop@2x.xpm  splitbutton_horizontal.xpm  splitbutton_horizontal@2x.xpm  splitbutton_vertical.xpm  splitbutton_vertical@2x.xpm  stop.xpm  stop@2x.xpm
src/: plugin.cpp
src/core/: HolonAbstractItemModel  HolonAlignedStorage  HolonCore  HolonTask  HolonTaskFolder  HolonTaskModel  HolonWorkflow  HolonWorkflowModel  holonabstractitemmodel.cpp  holonabstractitemmodel.h  holonalignedstorage.h  holoncore.cpp  holoncore.h  holoncore_p.h  holoncustomtask.cpp  holoncustomtask.h  holonid.cpp  holonid.h  holonnamespace.h  holonnewtasksdir.cpp  holonnewtasksdir.h  holonnewtasksmodel.cpp  holonnewtasksmodel.h  holonopentasksdir.cpp  holonopentasksdir.h  holonopentasksmodel.cpp  holonopentasksmodel.h  holonopentasktreemodel.cpp  holonopentasktreemodel.h  holonpythonsettings.cpp  holonpythonsettings.h  holonpythonwrapper.h  holontask.cpp  holontask.h  holontaskfolder.cpp  holontaskfolder.h  holontaskfoldermodel.cpp  holontaskfoldermodel.h  holontaskmodel.cpp  holontaskmodel.h  (+19 more)
src/pyside/: holonpackage.xml  holonpythonbindings.cpp  holonpythonbindings.h  holonpythonsettings.cpp  holonpythonsettings.h  holonpythontask.cpp  holonpythontask.h  holonpythontaskwindow.cpp  holonpythontaskwindow.h  holonpythonwrapper.h  pyside_config.py
src/tasks/: HolonAbstractCondition  HolonAbstractTask  HolonTaskThread  holonabstractcondition.cpp  holonabstractcondition.h  holonabstracttask.cpp  holonabstracttask.h  holonabstracttask_p.cpp  holonabstracttask_p.h  holoncustomtask.cpp  holoncustomtask.h  holontaskthread.cpp  holontaskthread.h
src/widgets/: HolonAbstractAttributesWindow  HolonAbstractTaskWindow  HolonAbstractWidget  HolonAbstractWindow  HolonMain  HolonMainWindow  HolonMenuBar  HolonSettingsWidgetInterface  HolonSidebar  HolonStackedWidget  HolonStackedWindow  HolonTaskAttributesWindow  HolonTaskStackedWindow  HolonTaskWindowAttributesWindow  HolonTheme  HolonThemeColors  HolonThemeIcons  HolonThemeSizeHints  HolonThemeStyle  HolonThemeStyleSheets  HolonToolBar  HolonWindow  HolonWindowArea  HolonWorkspace  holonabstractattributeswindow.cpp  holonabstractattributeswindow.h  holonabstractattributeswindow_p.cpp  holonabstractattributeswindow_p.h  holonabstracttaskwindow.cpp  holonabstracttaskwindow.h  holonabstracttaskwindow_p.cpp  holonabstracttaskwindow_p.h  holonabstractwidget.cpp  holonabstractwidget.h  holonabstractwindow.cpp  holonabstractwindow.h  holonabstractwindow_p.cpp  holonabstractwindow_p.h  holondesktop.cpp  holondesktop.h  (+171 more)
src/widgets/actions/: holonexitaction.cpp  holonexitaction.h
src/widgets/desktop/: HolonDesktop  holondesktop.cpp  holondesktop.h  holondesktop_p.cpp  holondesktop_p.h  holonmenu.cpp  holonmenu.h  holonmenu_p.cpp  holonmenu_p.h  holontaskbar.cpp  holontaskbar.h  holontaskbar_p.cpp  holontaskbar_p.h
src/widgets/layout/: holonsidebar.cpp  holonsidebar.h  holonsidebararea.cpp  holonsidebararea.h  holonsplitted.cpp  holonsplitted.h  holonstacked.cpp  holontiled.cpp  holontiled.h
src/widgets/layouts/: holonhbox.cpp  holonhbox.h  holonsidebar.cpp  holonsidebar.h  holonsidebararea.cpp  holonsidebararea.h  holonsplitted.cpp  holonsplitted.h  holonstacked.cpp  holonstacked.h  holontiled.cpp  holontiled.h  holonvbox.cpp  holonvbox.h
src/widgets/side/: holonareasidebar.cpp  holonareasidebar.h  holonareasidebars.cpp  holonareasidebars.h  holonnewtask.cpp  holonnewtask.h  holonopentasks.cpp  holonopentasks.h  holonsidebar.cpp  holonsidebar.h  holonsidewidget.cpp  holonsidewidget.h  holonwidgetinterface.cpp  holonwidgetinterface.h
